fix: nav-links visibility

--- a/src/assets/scss/components/navigation.scss
+++ b/src/assets/scss/components/navigation.scss
@@ -11,7 +11,7 @@
         margin-top: 1rem;
         margin-block-start: 1rem;
 
-        @media all and (min-width: 680px) {
+        @media all and (min-width: 681px) {
             font-size: var(--step-0);
             margin-top: 0;
             margin-block-start: 0;
@@ -24,7 +24,7 @@
         }
 
         &[data-open="true"] {
-            @media all and (min-width: 680px) {
+            @media all and (min-width: 681px) {
                 display: flex;
             }
         }
@@ -103,7 +103,7 @@
     }
 }
 
-@media all and (min-width: 680px) {
+@media all and (min-width: 681px) {
     .site-nav {
         flex-direction: row;
         grid-column: auto;
@@ -126,7 +126,7 @@
     }
 }
 
-@media (max-width: 679px) {
+@media (max-width: 680px) {
     #nav-list[data-open="true"] {
         display: block !important;
     }
